mise a jour de la partie responsive

--- a/Accessoir/accessoir.html
+++ b/Accessoir/accessoir.html
@@ -21,6 +21,9 @@
     <div class="head-top">
       <p>Livraison offerte à partir de 65€ d'achat !</p>
     </div>
+    <div class="btn-price">
+      <p><i class="fa fa-shopping-cart" aria-hidden="true"></i> 42.00€</p>
+    </div>
     <div class="flex-right">
       <div> <img src="../img/ribbon.svg" width="100%" alt=""> </div>
     </div>
@@ -59,10 +62,10 @@
         </div>
 
         <input class="slide-input" id="slide-dot-1" type="radio" name="slides" checked>
-        <img class="slide-img" src="../img/slider/1.jpg"  alt="">
+        <img class="slide-img" src="../img/slider/1.jpg" alt="">
 
         <input class="slide-input" id="slide-dot-2" type="radio" name="slides">
-        <img class="slide-img" src="../img/slider/2.jpg"  alt="">
+        <img class="slide-img" src="../img/slider/2.jpg" alt="">
       </div>
     </section>
 
@@ -148,23 +151,23 @@
   <footer class="footer">
     <div class="footer-top">
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-lock" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-truck" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-bug" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-phone" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-check-circle" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
     </div>
