--- a/The/the.html
+++ b/The/the.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="the.css"> 
-  <link rel="stylesheet" media="screen and (max-width:992px)"  href="the-table.css"> 
-  <link rel="stylesheet" media="screen and (max-width:680px)"  href="the-mobile.css"> 
+  <link rel="stylesheet" href="the.css">
+  <link rel="stylesheet" media="screen and (max-width:992px)" href="the-table.css">
+  <link rel="stylesheet" media="screen and (max-width:680px)" href="the-mobile.css">
   <title>Cup of Tea</title>
 </head>
 
@@ -21,6 +21,10 @@
     <div class="head-top">
       <p>Livraison offerte à partir de 65€ d'achat !</p>
     </div>
+
+    <div class="btn-price">
+      <p><i class="fa fa-shopping-cart" aria-hidden="true"></i> 42.00€</p>
+    </div>
     <div class="flex-right">
       <div> <img src="../img/ribbon.svg" width="100%" alt=""> </div>
     </div>
@@ -30,7 +34,7 @@
           <a href="../index.html">
             <img src="../img/logo.png" alt="">
           </a>
-          
+
         </div>
         <div class="head-price">
           <p>Mon panier <i class="fa fa-shopping-cart" aria-hidden="true"></i>
@@ -259,23 +263,23 @@
   <footer class="footer">
     <div class="footer-top">
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-lock" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-truck" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-bug" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-phone" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-check-circle" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
     </div>
