--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <div class="head-top">
       <p>Livraison offerte à partir de 65€ d'achat !</p>
     </div>
+    <div class="btn-price">
+      <p><i class="fa fa-shopping-cart" aria-hidden="true"></i> 42.00€</p>
+    </div>
     <div class="flex-right">
       <div> <img src="./img/ribbon.svg" width="100%" alt=""> </div>
     </div>
