insertion des fonts-awesome

--- a/GrandCrus/grandcrus.html
+++ b/GrandCrus/grandcrus.html
@@ -135,7 +135,7 @@
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-free-code-camp" aria-hidden="true"></i>
+        <i class="fa fa-bug" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
