--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" media="screen and (max-width:992px)"  href="style-table.css">
-  <link rel="stylesheet" media="screen and (max-width:680px)"  href="style-mobile.css">
+  <link rel="stylesheet" media="screen and (max-width:992px)" href="style-table.css">
+  <link rel="stylesheet" media="screen and (max-width:680px)" href="style-mobile.css">
   <title>Cup of Tea</title>
 </head>
 
@@ -165,23 +165,23 @@
   <footer class="footer">
     <div class="footer-top">
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-lock" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-truck" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-bug" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-phone" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
       <div>
-        <i class="fa fa-coffee" aria-hidden="true"></i>
+        <i class="fa fa-check-circle" aria-hidden="true"></i>
         <p>paiement securisé</p>
       </div>
     </div>
