--- a/Accessoir/accessoir.html
+++ b/Accessoir/accessoir.html
@@ -210,6 +210,8 @@
         debitis iusto. Temporibus maxime aspernatur dolor aliquid
         iure magnam, autem esse molestiae fuga nihil optio?
       </p>
+      <br />
+      <p> Write &copy by Benjamin EKIA MOUANGA </p>
     </div>
   </footer>
 </body>
